<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:title="@string/new_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_open"
        android:title="@string/open_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/save_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_preview"
        android:title="@string/preview"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save_as"
        android:title="@string/save_as"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
